Sun Nov  7 15:51:57 CET 2004	Wiedi	<wiedi@elbone.net>
	* Wrote lots of code while making hollidays ins france ;)
	* New Channelmodule works but needs some testing (for documentation see help command / source, sorry ;)
	* fixed a smal bug in the connect4 module
	* fixed lower/uppercase bug in auth module
	
Tue Oct  5 21:16:25 CEST 2004	Wiedi	<wiedi@elbone.net>
	* Rewrote OP, VOICE, INVITE, TOPIC, KICK and started rewriting ACCESS commands for
					the channel module.

Sun Sep 26 01:26:39 CEST 2004	Wiedi	<wiedi@elbone.net>
	* Started reimplementing the channel modul in a much cleaner, faster an less memory 
					consuming way after i got inspired by the source of
					lightweigh and mostly multiserv. I now have a exact
					plan how to implement the channel forward management.
					If this module is done it will realy rock :)

Fri Sep  3 02:25:58 CEST 2004	Wiedi	<wiedi@elbone.net>
	* Fixed new module functions
	* Finshed Connect4 module

Mon Jul 26 22:47:49 CEST 2004	Wiedi	<wiedi@elbone.net>
	* Added Functions so modules can have thier own Fake Clients
	* Added (nonworking) Connect4 module to show the functions

Sat Jul 24 23:42:33 CEST 2004	Wiedi	<wiedi@elbone.net>
	* DrScream is now helping writing the help files - welcome :)

Sat Jul 24 15:17:13 CEST 2004	Wiedi	<wiedi@elbone.net>
	* Cleaned up the help command output

Sun Jul 18 18:56:54 CEST 2004   Wiedi	<wiedi@elbone.net>
	* Added support for new w0nko ircd modes

=== 0.8 is released ==

Wed Jun 23 23:01:09 CEST 2004	Wiedi	<wiedi@elbone.net>
	* Added: Internal Event Handler (now you can use the channel module without the 
	                                 auth module and vise versa, but if both modules
	                                 are loaded they can communicated with each other)
	* Auth Module Added: IEvent for user authing
	* Chan Module Added: IEvent for user authing (user gets chanflags on authing)
	* Chan Module Bugfix: Module can now be loaded with the config file ;D
