@@ -1,3 +1,5 @@
 chanmode (Lvl. 0)
 ---------------------------------------
-not finished yet!
+example:
+chanmode #chan +mko geheim hans
+
